<resources>
    <string name="app_name">Bitácoras UTD</string>
    <string name="observaciones">Observaciones</string>
    <string name="bit_cora_de_laboratorio">Bitácora de laboratorio</string>
    <string name="entrar">Entrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="utd">UTD</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="bit">Bit</string>
    <string name="inicio">Inicio</string>
    <string name="somos_b_falos">Somos búfalos</string>
    <string name="somos_utd">Somos UTD</string>
</resources>
